--- a/WDE.DbcStore/Views/DBCConfigView.xaml
+++ b/WDE.DbcStore/Views/DBCConfigView.xaml
@@ -5,11 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" >
     <Grid>
-        <Grid.Resources >
-            <Style TargetType="TextBox" >
-                <Setter Property="Margin" Value="5,5,5,5" />
-            </Style>
-        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
@@ -20,7 +15,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Label Content="Path to legion DBC (.db2)" VerticalContentAlignment="Center"/>
-        <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="5" Name="Path" />
+        <TextBox Margin="5" Grid.Column="1" Grid.Row="0" Text="{Binding Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="5" Name="Path" />
         <Button Grid.Column="2" Grid.Row="0" Click="ShowFolderBrowse"  Padding="5" VerticalAlignment="Center">...</Button>
 
         <Label Content="Skip loading dbc" VerticalContentAlignment="Center" Grid.Row="1"/>
