--- a/WoWDatabaseEditor/Services/CreatureEntrySelectorService/CreatureEntrySelectorWindow.xaml
+++ b/WoWDatabaseEditor/Services/CreatureEntrySelectorService/CreatureEntrySelectorWindow.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <TextBox Margin="0,0,0,6" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-        <ListView VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" SelectedItem="{Binding SelectedItem}" ItemsSource="{Binding AllItems}" Grid.Row="1" Margin="0,0,0,6" MouseDoubleClick="ListView_MouseDoubleClick">
+        <ListView VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" SelectedItem="{Binding SelectedItem}" ItemsSource="{Binding AllItems}" Grid.Row="1" Margin="0,0,0,6" MouseDoubleClick="ListView_MouseDoubleClick" ItemContainerStyle="{DynamicResource ListViewItemStyle}">
             <ListView.View>
                 <GridView extensions:GridViewColumns.HeaderTextMember="HeaderText"
                       extensions:GridViewColumns.DisplayMemberMember="DisplayMember"
@@ -23,6 +23,5 @@
             </ListView.View>
         </ListView>
         <Button Grid.Row="2" HorizontalAlignment="Right" VerticalContentAlignment="Stretch" Content="Ok" Width="63" Click="Button_Click"></Button>
-      <!-- ColumnHeaderContainerStyle="{DynamicResource GridViewColumnHeader}" GridViewHeaderRowPresenter="{DynamicResource GridViewColumnHeader}" -->
     </Grid>
 </Window>
