--- a/WoWDatabaseEditor/Themes/DarkTheme.xaml
+++ b/WoWDatabaseEditor/Themes/DarkTheme.xaml
@@ -26,6 +26,11 @@
     <Setter Property="Border.BorderBrush" Value="#FF252526" />
   </Style>
 
+  <Style TargetType="ListBox">
+    <Setter Property="Background" Value="#FF252526"/>
+    <Setter Property="Foreground" Value="#FFE1E1E4"/>
+  </Style>
+  
   <Style TargetType="Button">
     <Setter Property="Template">
       <Setter.Value>
@@ -315,8 +320,8 @@
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-          <Border BorderThickness="0,0,0,1" BorderBrush="Black" Background="Transparent">
-            <TextBlock x:Name="ContentHeader" Text="{TemplateBinding Content}" Padding="5,5,5,5" Width="{TemplateBinding Width}" TextAlignment="Center" Foreground="Black"/>
+          <Border BorderThickness="0.5,0.5,0.5,0.5" BorderBrush="White" Background="Transparent">
+            <TextBlock x:Name="ContentHeader" Text="{TemplateBinding Content}" Padding="5,5,5,5" Width="{TemplateBinding Width}" TextAlignment="Center" Foreground="White"/>
           </Border>
         </ControlTemplate>
       </Setter.Value>
