Fixed style for SmartScriptEditor module.

--- a/WoWDatabaseEditor/Themes/DarkTheme.xaml
+++ b/WoWDatabaseEditor/Themes/DarkTheme.xaml
@@ -47,6 +47,7 @@
       </Setter.Value>
     </Setter>
     <Setter Property="Panel.Background" Value="#FF3F3F46" />
+    <Setter Property="MinWidth" Value="50"/>
   </Style>
 
   <Style TargetType="TextBox">
