--- a/WoWDatabaseEditor/Themes/DarkTheme.xaml
+++ b/WoWDatabaseEditor/Themes/DarkTheme.xaml
@@ -30,8 +30,67 @@
     <Setter Property="Background" Value="#FF252526"/>
     <Setter Property="Foreground" Value="#FFE1E1E4"/>
   </Style>
-  
-  <Style TargetType="Button">
+
+  <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="ToggleButton">
+    <Grid>
+      <Grid.ColumnDefinitions>
+         <ColumnDefinition />
+         <ColumnDefinition Width="20" />
+      </Grid.ColumnDefinitions>
+      <Border x:Name="Border" Grid.ColumnSpan="2" CornerRadius="2"
+         Background="White"
+         BorderThickness="1" />
+      <Border Grid.Column="0" CornerRadius="2,0,0,2" Margin="1" 
+         Background="#2D2D30" 
+         BorderThickness="0,0,1,0" />
+      <Path x:Name="Arrow" Grid.Column="1" HorizontalAlignment="Center"
+         VerticalAlignment="Center"
+         Data="M 0 0 L 4 4 L 8 0 Z"/>
+    </Grid>
+  </ControlTemplate>
+
+  <ControlTemplate x:Key="ComboBoxTextBox" TargetType="TextBox">
+    <Border x:Name="PART_ContentHost" Focusable="False" Background="{TemplateBinding Background}" />
+  </ControlTemplate>
+    
+  <Style x:Key="{x:Type ComboBox}" TargetType="ComboBox">
+    <Setter Property="Template">
+      <Setter.Value>
+         <ControlTemplate TargetType="ComboBox">
+           <Grid>
+              <ToggleButton Name="ToggleButton" Template="{StaticResource ComboBoxToggleButton}" 
+                Grid.Column="2" Focusable="false"
+                IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"
+                ClickMode="Press" />
+
+              <ContentPresenter Name="ContentSite" Margin="10,3,23,3" VerticalAlignment="Center" HorizontalAlignment="Left"
+                 Content="{TemplateBinding ComboBox.SelectionBoxItem}" ContentTemplate="{TemplateBinding ComboBox.SelectionBoxItemTemplate}" 
+                 ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"/>
+              
+              <TextBox x:Name="PART_EditableTextBox" Style="{x:Null}" Template="{StaticResource ComboBoxTextBox}" 
+                HorizontalAlignment="Left" VerticalAlignment="Center" Margin="3,3,23,3" Focusable="True" 
+                Background="Transparent" Visibility="Hidden" />
+             
+              <Popup Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsDropDownOpen}"
+                AllowsTransparency="True" Focusable="False" PopupAnimation="Slide">
+                  <Grid Name="DropDown" SnapsToDevicePixels="True" MinWidth="{TemplateBinding ActualWidth}"
+                    MaxHeight="{TemplateBinding MaxDropDownHeight}">
+                     <Border x:Name="DropDownBorder" Background="#2D2D30" BorderThickness="1"/>
+                     <ScrollViewer Margin="4,6,4,6" SnapsToDevicePixels="True">
+                       <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
+                     </ScrollViewer>
+                  </Grid>
+              </Popup>
+           </Grid>
+         </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+     
+    <Style.Triggers>
+    </Style.Triggers>
+  </Style>
+
+    <Style TargetType="Button">
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type Button}">
