--- a/WoWDatabaseEditor/Themes/DarkTheme.xaml
+++ b/WoWDatabaseEditor/Themes/DarkTheme.xaml
@@ -9,7 +9,9 @@
     <ResourceDictionary Source="Controls/Merged.xaml" />
   </ResourceDictionary.MergedDictionaries>
 
-  <!-- Menu -->
+  <SolidColorBrush x:Key="WindowBackgroundBrush" Color="#303030" />
+
+    <!-- Menu -->
   <SolidColorBrush x:Key="MenuDefaultBackground" Color="#2D2D30" />
   <SolidColorBrush x:Key="MenuDefaultText" Color="#F1F1F1" />
 
