--- a/WDE.ThemeChanger/Views/ThemeConfigView.xaml
+++ b/WDE.ThemeChanger/Views/ThemeConfigView.xaml
@@ -16,6 +16,6 @@
         <Label Content="Current:" />
         <Label Content="{Binding Name}" Grid.Row="0" Grid.Column="1"/>
         <Label Content="All:" Grid.Row="1" />
-        <ComboBox Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Top" Width="Auto" ItemsSource="{Binding Themes}" SelectionChanged="ComboBox_OnItemSelect" SelectedItem="{Binding Name}"/>
+        <ComboBox Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Top" Width="Auto" ItemsSource="{Binding Themes}" SelectedItem="{Binding Name}"/>
     </Grid>
 </UserControl>
