--- a/AvaloniaStyles/Styles/Catalina/Button.xaml
+++ b/AvaloniaStyles/Styles/Catalina/Button.xaml
@@ -17,8 +17,9 @@
     
     <Style Selector="Button TextBlock">
         <Setter Property="FontSize" Value="13" />
-        <Setter Property="Margin" Value="0,2,0,0"></Setter>
-        <Setter Property="Padding" Value="6,0"></Setter>
+        <Setter Property="Margin" Value="0,2,0,0" />
+        <Setter Property="Padding" Value="6,0" />
+        <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
     
     <Style Selector="Button:pressed">
