--- a/AvaloniaStyles/Styles/Windows10/ColorsDark.xaml
+++ b/AvaloniaStyles/Styles/Windows10/ColorsDark.xaml
@@ -1,8 +1,12 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Styles.Resources>
+        <SolidColorBrush Color="#2D2D30" x:Key="TitleBarBackground" />
+        <!-- dark window background -->
         <SolidColorBrush Color="#2D2D30" x:Key="SystemControlBackgroundAltHighBrush" />
         <SolidColorBrush Color="#3579C6" x:Key="AccentColorBackground" />
+        
+        <SolidColorBrush Color="#3579C6" x:Key="StatusBarBackground" />
         
         <SolidColorBrush Color="#3F3F45" x:Key="ContentBorderBrush" />
         <SolidColorBrush Color="#252526" x:Key="ContentBackground" />
