--- a/AvaloniaStyles/Styles/Windows10Light.xaml
+++ b/AvaloniaStyles/Styles/Windows10Light.xaml
@@ -1,4 +1,6 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        <FluentTheme Mode="Light" />
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/Style.xaml"/>
+        <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/ColorsLight.xaml" />
 </Styles>
