--- a/WDE.CommonViews.Avalonia/DbcStore/Views/DBCConfigView.axaml
+++ b/WDE.CommonViews.Avalonia/DbcStore/Views/DBCConfigView.axaml
@@ -21,12 +21,13 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <TextBlock Text="Path to DBC/DB2s" VerticalAlignment="Center" />
-        <TextBlock Margin="5" Grid.Column="1" Grid.Row="0"
-                   Text="{Binding Path, Mode=TwoWay}" Padding="5" Name="Path" />
+        <TextBox Margin="5" Grid.Column="1" Grid.Row="0"
+                 Text="{Binding Path, Mode=TwoWay}" Padding="5" Name="Path" />
         <Button Grid.Column="2" Grid.Row="0" Padding="5" VerticalAlignment="Center" Command="{Binding PickFolder}">...</Button>
 
         <TextBlock Text="DBC/DB2 Version" VerticalAlignment="Center" Grid.Row="1" />
-        <ComboBox Name="dbcVersion" Grid.Row="1" Grid.Column="1" Margin="5" Padding="5" VerticalAlignment="Center"
+        <ComboBox Name="dbcVersion" Grid.Row="1" Grid.Column="1" Margin="5" Padding="5"
+                  VerticalAlignment="Center" HorizontalAlignment="Stretch"
                   Items="{Binding DBCVersions}"
                   SelectedItem="{Binding DBCVersion}" />
 
