--- a/AvaloniaStyles/Styles/Windows10/Style.xaml
+++ b/AvaloniaStyles/Styles/Windows10/Style.xaml
@@ -10,4 +10,5 @@
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/StatusBar.xaml" />
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/ToolsTabControl.xaml" />
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/Button.axaml" />
+        <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/ListBox.xaml" />
 </Styles>
