--- a/AvaloniaStyles/Styles/Windows10/Window.xaml
+++ b/AvaloniaStyles/Styles/Windows10/Window.xaml
@@ -20,7 +20,7 @@
         <Setter Property="ExtendClientAreaTitleBarHeightHint" Value="24" />
         <Setter Property="ExtendClientAreaToDecorationsHint" Value="True" />
         <Setter Property="Chrome" Value="NoSystemChrome" />
-        <Setter Property="Background" Value="{DynamicResource SystemControlBackgroundAltHighBrush}" />
+        <Setter Property="Background" Value="{DynamicResource WindowContentBackground}" />
         <Setter Property="Foreground" Value="{DynamicResource SystemControlForegroundBaseHighBrush}"/>
         <Setter Property="Template">
             <ControlTemplate>
@@ -65,10 +65,10 @@
                                                 <ContentPresenter DockPanel.Dock="Top" Name="Tabs" Content="{TemplateBinding TabStrip}" />
                                                 <ContentPresenter Content="{TemplateBinding Content}" 
                                                                   BorderThickness="1,0,1,1"
-                                                                  BorderBrush="{DynamicResource ContentBorderBrush}"
-                                                                  Background="{DynamicResource ContentBackground}"/>
+                                                                  BorderBrush="{DynamicResource WindowContentBorderBrush}"
+                                                                  Background="{DynamicResource WindowContentBackground}"/>
                                             </DockPanel>
-                                            <GridSplitter Grid.Column="1"></GridSplitter>
+                                            <GridSplitter Grid.Column="1" Name="MainSplitter"></GridSplitter>
                                             <controls1:SideBar Grid.Column="2">
                                                 <ContentPresenter Content="{TemplateBinding SideBar}" />
                                             </controls1:SideBar>
@@ -82,6 +82,10 @@
                 </Border>
             </ControlTemplate>
         </Setter>
+    </Style>
+    
+    <Style Selector="controls1|ExtendedWindow:has-sidebar">
+        <Setter Property="Background" Value="{DynamicResource MainWindowBackgroundAccent}" />
     </Style>
     
     <Style Selector="controls1|ExtendedWindow:has-sidebar /template/ controls1|SideBar">
