--- a/AvaloniaStyles/Styles/Windows10/WindowControlButtons.axaml
+++ b/AvaloniaStyles/Styles/Windows10/WindowControlButtons.axaml
@@ -50,6 +50,7 @@
         <Setter Property="Height" Value="30" />
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderThickness" Value="0" />
     </Style>
     <Style Selector="controls|ExtendedWindow controls|WindowControlButtons Button /template/ ContentPresenter#PART_ContentPresenter">
         <Setter Property="BorderThickness" Value="0" />
