--- a/WoWDatabaseEditorCore.Avalonia/Services/MessageBoxService/MessageBoxView.axaml
+++ b/WoWDatabaseEditorCore.Avalonia/Services/MessageBoxService/MessageBoxView.axaml
@@ -2,7 +2,8 @@
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             Title="{Binding Model.MainInstruction}"
+             Title="{Binding Model.Title}"
+             Header="{Binding Model.MainInstruction}"
              Message="{Binding Model.Content}"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:messageBoxService="clr-namespace:WoWDatabaseEditorCore.Avalonia.Services.MessageBoxService"
