--- a/AvaloniaStyles/Styles/BigSur/Window.xaml
+++ b/AvaloniaStyles/Styles/BigSur/Window.xaml
@@ -101,6 +101,14 @@
                                 <ContentPresenter Content="{Binding ToolBar.Content, RelativeSource={RelativeSource Mode=TemplatedParent}}" />
                             </controls1:ExtendedTitleBar>
                     
+                            <NativeMenuBar DockPanel.Dock="Top">
+                                <NativeMenuBar.Styles>
+                                    <Style Selector="Menu">
+                                        <Setter Property="Background" Value="{DynamicResource TitleBarBackground}" />
+                                    </Style>
+                                </NativeMenuBar.Styles>
+                            </NativeMenuBar>
+                            
                             <ContentPresenter DockPanel.Dock="Top" Name="Tabs" Content="{TemplateBinding TabStrip}" />
 
                             <ContentPresenter Content="{TemplateBinding StatusBar}" DockPanel.Dock="Bottom" Name="StatusBar"/>
@@ -157,7 +165,7 @@
                                           Content="{TemplateBinding Image}"
                                           Width="54" Height="54"
                                           Margin="0,12,0,12" />
-                        <TextBlock IsHitTestVisible="False" FontWeight="Black" Text="{TemplateBinding Title}" TextWrapping="WrapWithOverflow" HorizontalAlignment="Center"/>
+                        <TextBlock IsHitTestVisible="False" FontWeight="Black" Text="{TemplateBinding Header}" TextWrapping="WrapWithOverflow" HorizontalAlignment="Center"/>
                         <TextBlock IsHitTestVisible="False" Text="{TemplateBinding Message}" TextWrapping="WrapWithOverflow" HorizontalAlignment="Stretch"/>
                         <ContentPresenter Content="{TemplateBinding Content}" Name="Buttons" />
                     </StackPanel>
