--- a/AvaloniaStyles/Styles/Windows10/Button.axaml
+++ b/AvaloniaStyles/Styles/Windows10/Button.axaml
@@ -16,11 +16,11 @@
       </Setter>
     </Style>
     
-    <Style Selector="Button /template/ ContentPresenter#PART_ContentPresenter">
+    <!--<Style Selector="Button /template/ ContentPresenter#PART_ContentPresenter">
       <Setter Property="Transitions">
         <Transitions>
-          <utils:SolidBrushTransition Property="Background" Duration="0:0:0.400" />
-          <utils:SolidBrushTransition Property="BorderBrush" Duration="0:0:0.400" />
+          <utils:SolidBrushTransition Property="Background" Duration="0:0:0.200" />
+          <utils:SolidBrushTransition Property="BorderBrush" Duration="0:0:0.200" />
         </Transitions>
       </Setter>
     </Style>
@@ -31,7 +31,7 @@
           <utils:SolidBrushTransition Property="BorderBrush" Duration="0:0:0.050" />
         </Transitions>
       </Setter>
-    </Style>
+    </Style>-->
 
     <Style Selector="Button:pressed, RepeatButton:pressed, ToggleButton:pressed">
       <Setter Property="RenderTransform" Value="none" />
@@ -57,5 +57,11 @@
     <Style Selector="controls|ToolBar Button">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderThickness" Value="0" />
+    </Style>
+    <Style Selector="controls|ToolBar Button:disabled">
+      <Setter Property="Opacity" Value="0.2" />
+    </Style>
+    <Style Selector="controls|ToolBar Button:disabled /template/ ContentPresenter#PART_ContentPresenter">
+      <Setter Property="Background" Value="Transparent" />
     </Style>
 </Styles>
