--- a/AvaloniaStyles/Styles/Windows10/StatusBar.xaml
+++ b/AvaloniaStyles/Styles/Windows10/StatusBar.xaml
@@ -16,4 +16,21 @@
             </ControlTemplate>
         </Setter>
     </Style>
+    
+    <Style Selector="controls|StatusBar Button">
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="TextBlock.Foreground" Value="White" />
+    </Style>
+    <Style Selector="controls|StatusBar Button:disabled /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="Transparent" />
+    </Style>
+    <Style Selector="controls|StatusBar Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="#20000000" />
+        <Setter Property="TextBlock.Foreground" Value="White" />
+    </Style>
+    <Style Selector="controls|StatusBar Button:pressed /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="#40000000" />
+        <Setter Property="TextBlock.Foreground" Value="White" />
+    </Style>
 </Styles>
