--- a/AvaloniaStyles/Styles/Windows10/Style.xaml
+++ b/AvaloniaStyles/Styles/Windows10/Style.xaml
@@ -1,5 +1,6 @@
 <Styles xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:system="clr-namespace:System;assembly=System.Runtime">
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
         
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/TabStrip.xaml" />
@@ -11,4 +12,10 @@
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/ToolsTabControl.xaml" />
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/Button.axaml" />
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/ListBox.xaml" />
+        <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/DataGrid.axaml" />
+        <Style>
+                <Style.Resources>
+                        <system:Double x:Key="ControlContentThemeFontSize">12</system:Double>
+                </Style.Resources>
+        </Style>
 </Styles>
