--- a/AvaloniaStyles/Styles/Windows10/Window.xaml
+++ b/AvaloniaStyles/Styles/Windows10/Window.xaml
@@ -109,14 +109,25 @@
         <Setter Property="WindowStartupLocation" Value="CenterOwner" />
         <Setter Property="Template">
             <ControlTemplate>
-                <Border Background="{TemplateBinding Background}" Padding="15">
+                <Border Background="{TemplateBinding Background}">
                     <DockPanel LastChildFill="True">
-                        <ContentPresenter Content="{TemplateBinding Image}"
-                                          VerticalContentAlignment="Center"
-                                          Width="54" Height="54"
-                                          Margin="0,0,15,0" />
-                        <ContentPresenter DockPanel.Dock="Bottom" Content="{TemplateBinding Content}" Name="Buttons" HorizontalContentAlignment="Right"/>
-                        <TextBlock Text="{TemplateBinding Message}" TextWrapping="WrapWithOverflow" FontSize="14" />
+                        <ContentPresenter DockPanel.Dock="Bottom" 
+                                          Content="{TemplateBinding Content}"
+                                          Name="Buttons" 
+                                          HorizontalContentAlignment="Right" 
+                                          Background="#F0F0F0" 
+                                          BorderBrush="#DFDFDF"
+                                          BorderThickness="0,1,0,0"
+                                          Padding="10"/>
+                        <DockPanel LastChildFill="True" Margin="10">
+                            <ContentPresenter Content="{TemplateBinding Image}"
+                                              VerticalContentAlignment="Top"
+                                              VerticalAlignment="Top"
+                                              Width="32" Height="32"
+                                              Margin="0,0,15,0" />
+                            <TextBlock Text="{TemplateBinding Header}" Foreground="#003399" TextWrapping="WrapWithOverflow" FontSize="16" DockPanel.Dock="Top" Margin="0,0,0,12" />
+                            <TextBlock Text="{TemplateBinding Message}" TextWrapping="WrapWithOverflow" FontSize="12" />
+                        </DockPanel>
                     </DockPanel>
                 </Border>
             </ControlTemplate>
