--- a/WoWDatabaseEditorCore.Avalonia/Views/MainWindow.xaml
+++ b/WoWDatabaseEditorCore.Avalonia/Views/MainWindow.xaml
@@ -47,7 +47,7 @@
     <controls:ExtendedWindow.ToolBar>
         <controls:ToolBar>
             <controls:ToolBar.LeftContent>
-                <Button>
+                <Button Command="{Binding ExecuteChangedCommand}">
                     <Border Background="Transparent"
                             Width="12"
                             Height="12"
@@ -62,7 +62,7 @@
             </controls:ToolBar.LeftContent>
             <controls:ToolBar.RightContent>
                 <StackPanel Orientation="Horizontal">
-                    <Button>SQL</Button>
+                    <Button Command="{Binding GenerateCurrentSqlCommand}">SQL</Button>
                 </StackPanel>
             </controls:ToolBar.RightContent>
         </controls:ToolBar>
