--- a/AvaloniaStyles/Styles/BigSur/MenuItem.xaml
+++ b/AvaloniaStyles/Styles/BigSur/MenuItem.xaml
@@ -13,6 +13,10 @@
         <Setter Property="Margin" Value="2" />
     </Style>
 
+    <Style Selector="MenuItem /template/ Border#root">
+        <Setter Property="CornerRadius" Value="3" />
+    </Style>
+    
     <Style Selector="MenuItem:selected /template/ Border#root">
         <Setter Property="Background" Value="{DynamicResource MenuItem.Background.PointerOver}" />
     </Style>
