--- a/WDE.CommonViews.Avalonia/SQLEditor/Views/SqlEditorView.axaml
+++ b/WDE.CommonViews.Avalonia/SQLEditor/Views/SqlEditorView.axaml
@@ -3,13 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
              xmlns:avaloniaEdit="https://github.com/avaloniaui/avaloniaedit"
-             xmlns:converters="clr-namespace:WDE.Common.Avalonia.Converters;assembly=WDE.Common.Avalonia">
+             xmlns:converters="clr-namespace:WDE.Common.Avalonia.Converters;assembly=WDE.Common.Avalonia"
+             xmlns:views="clr-namespace:WDE.SQLEditor.Views"
+             Name="SqlUserControl">
+    <UserControl.KeyBindings>
+        <KeyBinding Gesture="{x:Static TextBox.CopyGesture}" Command="{Binding ElementName=SqlUserControl, Path=Copy}" />
+        <KeyBinding Gesture="{x:Static TextBox.PasteGesture}" Command="{Binding ElementName=SqlUserControl, Path=Paste}" />
+        <KeyBinding Gesture="{x:Static TextBox.CutGesture}" Command="{Binding ElementName=SqlUserControl, Path=Cut}" />
+        <KeyBinding Gesture="{x:Static views:SqlEditorView.UndoGesture}" Command="{Binding ElementName=SqlUserControl, Path=Undo}" />
+        <KeyBinding Gesture="{x:Static views:SqlEditorView.RedoGesture}" Command="{Binding ElementName=SqlUserControl, Path=Redo}" />
+    </UserControl.KeyBindings>
     <UserControl.Resources>
         <converters:NativeTextDocumentConverter x:Key="DocumentConverter" />
     </UserControl.Resources>
     <DockPanel LastChildFill="True">
         <Button DockPanel.Dock="Top" Content="Execute SQL" Command="{Binding ExecuteSql}" />
         <avaloniaEdit:TextEditor SyntaxHighlighting="TSQL" Document="{Binding Code, Converter={StaticResource DocumentConverter}}" Padding="5" x:Name="MyAvalonEdit"
+                          ShowLineNumbers="True"
                           FontFamily="Consolas,Menlo,Courier,Courier New" />
     </DockPanel>
 </UserControl>
