--- a/WoWDatabaseEditorCore.Avalonia/App.xaml
+++ b/WoWDatabaseEditorCore.Avalonia/App.xaml
@@ -1,6 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:avaloniaStyles="clr-namespace:AvaloniaStyles;assembly=AvaloniaStyles"
+             xmlns:appearanceService="clr-namespace:WoWDatabaseEditorCore.Avalonia.Services.AppearanceService"
              x:Class="WoWDatabaseEditorCore.Avalonia.App">
     <Application.Resources>
             <DrawingImage x:Key="StatusBarIconNotice">
@@ -43,7 +44,7 @@
     </DrawingImage>
     </Application.Resources>
     <Application.Styles>
-        <avaloniaStyles:SystemTheme Mode="MacOsBigSurLight" />
+        <appearanceService:AvaloniaThemeStyle />
         <StyleInclude Source="avares://AvaloniaEdit/AvaloniaEdit.xaml" />
         <StyleInclude Source="avares://WDE.SmartScriptEditor.Avalonia/Themes/Generic.axaml"/>
         <StyleInclude Source="avares://Dock.Avalonia.Themes.Default/DefaultTheme.axaml"/>
