--- a/AvaloniaStyles/Styles/BigSur/Style.xaml
+++ b/AvaloniaStyles/Styles/BigSur/Style.xaml
@@ -3,6 +3,7 @@
     <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
     <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
     <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml"/>
+    <StyleInclude Source="avares://AvaloniaStyles/Controls/GridViewStyle.axaml" />
     
     <Style Selector="TextBlock">
         <Setter Property="FontSize" Value="13" />
@@ -29,6 +30,7 @@
     <StyleInclude Source="avares://AvaloniaStyles/Styles/BigSur/ListBox.xaml"/>
     <StyleInclude Source="avares://AvaloniaStyles/Styles/BigSur/ListBoxItem.xaml"/>
     <StyleInclude Source="avares://AvaloniaStyles/Styles/BigSur/DataGrid.xaml"/>
+    <StyleInclude Source="avares://AvaloniaStyles/Styles/BigSur/GridView.axaml"/>
     
     <StyleInclude Source="avares://AvaloniaStyles/Styles/BigSur/ToolsTabControl.xaml"/>
 </Styles>
