--- a/AvaloniaStyles/Styles/Windows10/Style.xaml
+++ b/AvaloniaStyles/Styles/Windows10/Style.xaml
@@ -2,6 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:system="clr-namespace:System;assembly=System.Runtime">
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
+        <StyleInclude Source="avares://AvaloniaStyles/Controls/GridViewStyle.axaml" />
         
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/TabStrip.xaml" />
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/NativeMenuBar.xaml" />
@@ -14,6 +15,7 @@
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/ListBox.xaml" />
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/DataGrid.axaml" />
         <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/TextBox.axaml" />
+        <StyleInclude Source="avares://AvaloniaStyles/Styles/Windows10/GridView.axaml" />
         <Style>
                 <Style.Resources>
                         <system:Double x:Key="ControlContentThemeFontSize">12</system:Double>
